# k8s-cicd-gitlab

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/provision-gitlab/: SKILL.md
.agents/skills/provision-phase-1/: SKILL.md
apps/guestbook/guestbook-go/: Dockerfile  Makefile  README.md  go.mod  main.go
apps/guestbook/guestbook-go/public/: index.html  script.js
apps/guestbook/helm-chart/: Chart.yaml  values-common.yaml  values-dev.yaml  values-prod.yaml  values-qa.yaml  values.yaml
apps/guestbook/helm-chart/templates/: frontend-deployment.yaml  frontend-service.yaml  guestbook-ingress.yaml
apps/redis/: redis-master-deployment.yaml
apps/redis-slave/: redis-replica-deployment.yaml
apps/redis-slave/helm-chart/: values.yaml
apps/redis-slave/helm-chart/templates/: redis-replica-deployment.yaml  redis-replica-service.yaml
apps/redis-slave/redis-slave/: Dockerfile  Makefile
apps/redis/helm-chart/: Chart.yaml  values.yaml
apps/redis/helm-chart/templates/: redis-master-deployment.yaml  redis-master-service.yaml
data/node1/: .gitkeep
data/node3/: .gitkeep
data/node5/: .gitkeep
data/shared/: .gitkeep
docs/: phase-1.md  phase-2.md  prereqs.md  secrets.md
infra/helm-charts/: cloudnative-pg-0.29.0.tgz  gitlab-10.1.1.tgz  gitlab-9.11.7.tgz  minio-5.4.0.tgz  openbao-0.10.1.tgz  redis-27.0.13.tgz
infra/scripts/: bootstrap.py  pki.py
infra/scripts/bootstrap/: VERSIONS.json  __init__.py  __main__.py  app.py  app_installer.py  cli.py  helm_cache.py  installer.py  logger.py  os_detect.py  paths.py  pki.py  prereq.py  secrets_cli.py  shell.py  tofu.py  versions.py
infra/scripts/bootstrap/phase2/: __init__.py  catalog.py  cert.py  cloudnative_pg.py  gateway.py  gitlab.py  local_path_provisioner.py  minio.py  openbao.py  persistent_secrets.py  pipeline.py  redis.py  runner.py  secrets.py  stable_storage.py  traefik.py  wildcard_certs.py
infra/scripts/bootstrap/phase2/references/: cluster-postgresql.yaml  gateway.yaml  helm-values-gitlab.yaml  helm-values-minio.yaml  helm-values-openbao.yaml  helm-values-redis.yaml  helm-values-runner.yaml  helm-values-traefik.yaml  (+2 more)
infra/tls/: .gitkeep
infra/tls/public/: ca.crt
infra/tofu/: cluster.tf  locals.tf  outputs.tf  providers.tf  tofu.tfvars.example  variables.tf
